--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "expo-image": "~2.3.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
@@ -63,6 +62,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo-router": "^5.1.4",
     "typescript": "~5.8.3"
   },
   "private": true
