--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "expo-web-browser": "~15.0.7",
     "lottie-react-native": "~7.3.1",
     "lucide-react-native": "^0.513.0",
+    "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
